--- a/src/main/webapp/images.xhtml
+++ b/src/main/webapp/images.xhtml
@@ -11,6 +11,7 @@
     </h:head>
     
     <h:body>
+        <!--hhhhhhh-->
         <ui:composition template="template/main.xhtml">
             <ui:define name="content">
                 <h:link outcome="modifImage">Albums</h:link>
