--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,11 +12,7 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"/>
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-        <script type="text/javascript">
-            $(document).ready(function(){
-                
-            });            
-        </script>
+
     </h:head>
     <h:body>
 
@@ -30,23 +26,23 @@
                     <legend>Connexion</legend>
 
                     <h:panelGroup layout="block" styleClass="form-group">
-                        <h:inputText id="pseudoC" value="#{utilisateurSession.pseudo}" p:placeholder="Pseudo" required="true"
-                                     requiredMessage="Veuillez remplir correctement ce champs" 
-                                     validatorMessage="Entrez correctement votre mail" styleClass="form-control">
+                        <h:inputText id="pseudoC" value="#{login.username}" p:placeholder="Pseudo" required="true"
+                                     requiredMessage="Veuillez remplir correctement ce champs" styleClass="form-control">
+                                      <!--validatorMessage="Entrez correctement votre mail"--> 
 
-                            <f:validateRegex pattern="^[a-z0-9._-]+@[a-z0-9._-]{2,}\.[a-z]{2,4}" />
+                            <!--<f:validateRegex pattern="^[a-z0-9._-]+@[a-z0-9._-]{2,}\.[a-z]{2,4}" />-->
                         </h:inputText>
                         <h:message for="pseudoC" styleClass="message_erreur" />
                     </h:panelGroup>
 
                     <h:panelGroup layout="block" styleClass="form-group">
-                        <h:inputSecret id="password" value="#{utilisateurSession.mdp}" p:placeholder="Mot de passe" 
+                        <h:inputSecret id="password" value="#{login.password}" p:placeholder="Mot de passe" 
                                        requiredMessage="Veuillez remplir correctement ce champs" styleClass="form-control"/>
                         <h:message for="pseudo" styleClass="message_erreur" />
                     </h:panelGroup>
 
                     <h:panelGroup layout="block" styleClass="form-group">
-                        <h:commandButton id="submit" value="Connexion" styleClass="btn btn-primary" action="#{utilisateurSession.connexion()}"/>
+                        <h:commandButton id="submit" value="Connexion" styleClass="btn btn-primary" action="#{login.loginControl()}"/>
                     </h:panelGroup>
 
                     <p class="help-block"><strong>Condition générale d'utilisation : </strong><br/>
@@ -63,7 +59,7 @@
                     <legend>Inscription</legend>
 
                     <h:panelGroup layout="block" styleClass="form-group">
-                        <h:inputText id="pseudoI" value="" required="true" p:placeholder="Entrez votre mail" 
+                        <h:inputText id="pseudoI" value="#{create.username}" required="true" p:placeholder="Entrez votre mail" 
                                      requiredMessage="Veuillez remplir correctement ce champs" 
                                      validatorMessage="Entrez correctement votre mail" styleClass="form-control">
 
@@ -73,7 +69,7 @@
                     </h:panelGroup>
 
                     <h:panelGroup layout="block" styleClass="form-group">
-                        <h:inputText id="nom" value="" p:placeholder="Votre nom" 
+                        <h:inputText id="nom" value="#{create.nom}" p:placeholder="Votre nom" 
                                      validatorMessage="Votre nom doit avoir au moins deux caractères"
                                      styleClass="form-control">
 
@@ -84,7 +80,7 @@
                     </h:panelGroup>
 
                     <h:panelGroup layout="block" styleClass="form-group">
-                        <h:inputText id="prenom" value="" p:placeholder="Votre prenom" 
+                        <h:inputText id="prenom" value="#{create.prenom}" p:placeholder="Votre prenom" 
                                      validatorMessage="Votre prenom doit avoir au moins deux caractères" 
                                      styleClass="form-control">
 
@@ -95,25 +91,25 @@
                     </h:panelGroup>
 
                     <h:panelGroup layout="block" styleClass="form-group">
-                        <h:inputText id="mot_de_passe" value="" p:placeholder="Mot de passe" 
+                        <h:inputText id="mot_de_passe" value="#{create.password}" p:placeholder="Mot de passe" 
                                      styleClass="form-control">
-                            <f:validator validatorId="ConfirmeMdpValidator"/>
-                            <f:attribute name="confirmMdp" value="#{confirmMdp}"/>
+<!--                            <f:validator validatorId="ConfirmeMdpValidator"/>
+                            <f:attribute name="confirmMdp" value="#{confirmMdp}"/>-->
 
                         </h:inputText>
                     </h:panelGroup>
 
-                    <h:panelGroup layout="block" styleClass="form-group">
+<!--                    <h:panelGroup layout="block" styleClass="form-group">
                         <h:inputText id="confirmMdp" value="" p:placeholder="Confirmez votre mot de passe"
                                      styleClass="form-control"/>
                         <h:message for="mot_de_passe" styleClass="message_erreur"/>
-                    </h:panelGroup>
+                    </h:panelGroup>-->
 
                     <p class="help-block">* tout les champs sont obligatoires </p>
 
                     <h:panelGroup layout="block" styleClass="form-group">
                         <h:commandButton id="submit" value="Inscription" styleClass="btn btn-primary" 
-                                         action="inscription.xhtml"/>
+                                         action="#{create.loginCreate()}"/>
                     </h:panelGroup>
 
                 </h:form>
@@ -121,17 +117,5 @@
             </h:panelGroup>
 
         </h:panelGroup>
-
-        <input type="submit" id="test" value="test"/>
-
-        <div id="mondiv">
-            egrehtrhtrhrthyj
-        </div>
-
-        <script>
-                    $("#test").click(function{
-            alert("hhhhh");
-            });
-        </script>
     </h:body>
 </html>
