--- a/src/main/webapp/index_1.xhtml
+++ b/src/main/webapp/index_1.xhtml
@@ -5,12 +5,15 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Insertion d'images</title>
+                <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"/>
+        <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     </h:head>
     <h:body>
         <h:form enctype="multipart/form-data">
             <p:messages showDetail="true"/>
-            <p:fileUpload value="#{index.image}" mode="simple"/>
-            <p:commandButton value="submit" ajax="false" actionListener="#{index.message()}"/>
+            <p:fileUpload value="#{insert.file}" mode="simple"/>
+            <p:commandButton value="submit" ajax="false" styleClass="btn btn-primary" actionListener="#{insert.message()}"/>
             <h:graphicImage id="image" alt="uploaded image" url="/images" />
         </h:form>    
     </h:body>
