--- a/src/main/webapp/recupimages.xhtml
+++ b/src/main/webapp/recupimages.xhtml
@@ -14,7 +14,7 @@
 
         <ui:composition template="template/main.xhtml">
             <ui:define name="content">
-                <c:forEach var="i" begin="1" end="6" step="1">
+                <c:forEach items="#{selectImages.listMeta}" var="i" begin="0" end="1" step="1">
                     <div class="row block">
                         <div class="row">
                             <div class="col-sm-8">
@@ -22,7 +22,8 @@
 
                                     <!--inserer l'id de l'image-->
                                     <f:param name="idImage" value="idimage" />
-                                    <h:graphicImage library="images" name="t#{i}.jpg"/>
+                                    <h:graphicImage library="images" name="#{i.lien}"/>
+                                    
                                     <img src="/resources/images/t1.jpg"/>
                                 </h:link>
                                 
