--- a/src/main/webapp/utilisateur/index_1.xhtml
+++ b/src/main/webapp/utilisateur/index_1.xhtml
@@ -5,7 +5,7 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Insertion d'images</title>
-                <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"/>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"/>
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     </h:head>
@@ -13,8 +13,9 @@
         <h:form enctype="multipart/form-data">
             <p:messages showDetail="true"/>
             <p:fileUpload value="#{insert.file}" mode="simple"/>
-            <p:commandButton value="submit" ajax="false" styleClass="btn btn-primary" actionListener="#{insert.message()}"/>
-            <h:graphicImage id="image" alt="uploaded image" url="/images" />
+            <div class="form-group">
+                <h:commandButton value="submit"  styleClass="btn btn-primary form-control" actionListener="#{insert.message()}"/>
+            </div>
         </h:form>    
     </h:body>
 </html>
