--- a/src/main/webapp/utilisateur/compteUtilisateur.xhtml
+++ b/src/main/webapp/utilisateur/compteUtilisateur.xhtml
@@ -32,7 +32,7 @@
                             <div class="meta_donnee col-sm-4">
                                 <legend>Métadonnées</legend>
                                 <p>Titre : #{i.titreImage}</p><br/>
-                                <p>Titre : #{i.imageWidth}</p><br/>
+                                <p>Largeur : #{i.imageWidth}</p><br/>
                                 <p>Titre : #{i.imageHeight}</p><br/>
                                 
                             </div>
